force-app/main/default/objects/Field_Audit_Config__mdt/Field_Audit_Config__mdt.object-meta.xml
<CustomObject>
    <label>Field Audit Config</label>
    <pluralLabel>Field Audit Config</pluralLabel>
</CustomObject>