force-app/main/default/objects/Field_Audit_Config__mdt/fields/CompareMode__c.field-meta.xml
<CustomField>
    <fullName>CompareMode__c</fullName>
    <label>CompareMode</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>RAW</fullName>
                <default>true</default>
                <label>RAW</label>
            </value>
            <value>
                <fullName>STRING</fullName>
            </value>
            <value>
                <fullName>DECIMAL_NORMALIZED</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>