force-app/main/default/objects/Field_Audit_Config__mdt/fields/CompositeKey__c.field-meta.xml
<CustomField>
    <fullName>CompositeKey__c</fullName>
    <caseSensitive>true</caseSensitive>
    <label>Composite Key</label>
    <length>160</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>