force-app/main/default/objects/Field_Audit_Config__mdt/fields/FieldApiName__c.field-meta.xml
<CustomField>
    <fullName>FieldApiName__c</fullName>
    <label>FieldApiName</label>
    <length>80</length>
    <type>Text</type>
</CustomField>