force-app/main/default/objects/Field_Audit_Config__mdt/fields/InboundActive__c.field-meta.xml
<CustomField>
    <fullName>InboundActive__c</fullName>
    <defaultValue>true</defaultValue>
    <label>InboundActive</label>
    <type>Checkbox</type>
</CustomField>