force-app/main/default/objects/Field_Audit_Config__mdt/fields/IsEnabled__c.field-meta.xml
<CustomField>
    <fullName>IsEnabled__c</fullName>
    <defaultValue>true</defaultValue>
    <label>IsEnabled</label>
    <type>Checkbox</type>
</CustomField>