force-app/main/default/objects/Field_Audit_Config__mdt/fields/OutboundActive__c.field-meta.xml
<CustomField>
    <fullName>OutboundActive__c</fullName>
    <defaultValue>false</defaultValue>
    <label>OutboundActive</label>
    <type>Checkbox</type>
</CustomField>