force-app/main/default/objects/Field_Audit_Config__mdt/fields/StoreMode__c.field-meta.xml
<CustomField>
    <fullName>StoreMode__c</fullName>
    <label>StoreMode</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ALL</fullName>
                <default>true</default>
                <label>ALL</label>
            </value>
            <value>
                <fullName>LAST_ONLY</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>